[package]
name = "WhitePine"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
macroquad = "0.4"


[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
build = "build.rs"

[build-dependencies]
winres = "0.1"